--- a/final-exam.html
+++ b/final-exam.html
@@ -6,13 +6,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://final-exam.css" />
+  <link rel="stylesheet" type="text/css" href="final-exam.css" />
 </head>
 <body>
-<div class="container">
+<div class="clearfix"><div class="container">
   <h1>11 festive holiday christmas cake recipes</h1>
   <p><a href="http://www.epicurious.com/recipes-menus/our-most-festive-holiday-christmas-cakes-recipes-gallery" target="_blank"> Source: epicurious.com</p>
- <div class="left-column">
+
+ <div class="left-column"><div class="col-xs-12 col-sm-8">
    <img src="http://assets.epicurious.com/photos/54b288f19a93d64c380b2091/6:4/w_1024%2Ch_682/368939_gingerbread-cake_1x1.jpg"></img>
    <h3><a href="http://www.epicurious.com/recipes/food/views/gingerbread-cake-368939" target="_blank">Gingerbread Cake</a></h3>
    <p>Store-bought lemon curd is gently folded into the whipped cream topping to add a unique twist to the cake.</p>
@@ -25,14 +26,15 @@
    <p>Layers of dark chocolate ganache and white chocolate cream help put this cake over the top.</p>
    <h3><a href="http://www.epicurious.com/recipes/food/views/cinnamon-bun-bundt-cake-51196640" target="_blank">Cinnamon Bun Bundt Cake</a></h3>
    <p>Of course, any leftovers of this cake are a welcome treat at breakfast the next morning.</p>
- </div>
- <div class="right-column">
+ </div></div>
+
+ <div class="right-column"><div class="col-xs-12 col-sm-4">
    <h2>More lists on epicurious.com</h2>
    <ul>
      <li><a href="http://www.epicurious.com/recipes-menus/clean-restorative-bowl-food-article" target="_blank">3 New Recipes for Bowl Food (Yes, Bowl Food)</a></li>
      <li><a href="http://www.epicurious.com/recipes-menus/three-five-ingredient-pastas-for-winter-recipes-article" target="_blank">Secrets of 5-Ingredient Pastas</a></li>
- </div>
-</div>
+ </div></div>
+</div></div>
 <script>
 
 </script>
