--- a/final-exam.html
+++ b/final-exam.html
@@ -11,7 +11,7 @@
 <body>
 <div class="clearfix"><div class="container">
   <h1>11 festive holiday christmas cake recipes</h1>
-  <p><a href="http://www.epicurious.com/recipes-menus/our-most-festive-holiday-christmas-cakes-recipes-gallery" target="_blank"> Source: epicurious.com</p>
+  <p class="source"><a href="http://www.epicurious.com/recipes-menus/our-most-festive-holiday-christmas-cakes-recipes-gallery" target="_blank"> Source: epicurious.com</p>
 
  <div class="left-column"><div class="col-xs-12 col-sm-8">
    <img src="http://assets.epicurious.com/photos/54b288f19a93d64c380b2091/6:4/w_1024%2Ch_682/368939_gingerbread-cake_1x1.jpg"></img>
