--- a/final-exam.html
+++ b/final-exam.html
@@ -26,6 +26,28 @@
    <p>Layers of dark chocolate ganache and white chocolate cream help put this cake over the top.</p>
    <h3><a href="http://www.epicurious.com/recipes/food/views/cinnamon-bun-bundt-cake-51196640" target="_blank">Cinnamon Bun Bundt Cake</a></h3>
    <p>Of course, any leftovers of this cake are a welcome treat at breakfast the next morning.</p>
+
+  <a id="reveal-recipes" href="#">See more recipies</a>
+
+  <div id="more-recipes">
+    <h3><a href="http://www.epicurious.com/recipes/food/views/cranberry-spice-cake-368253" target="_blank">Cranberry Spice Cake</a></h3>
+    <p>An easy lemon glaze adds an extra layer of brightness to this seasonal cake.</p>
+
+    <h3><a href="http://www.epicurious.com/recipes/food/views/chocolate-glazed-hazelnut-mousse-cake-233810" target="_blank">Chocolate-Glazed Hazelnut Mousse Cake</a></h3>
+    <p>This cake can be made up to 2 days ahead of time and stored in the fridge—just be sure to leave the glaze off until the day you serve it.</p>
+
+    <h3><a href="http://www.epicurious.com/recipes-menus/our-most-festive-holiday-christmas-cakes-recipes-gallery/9" target="_blank">Spiced Chai Bundt Cake</a></h3>
+    <p>Chai tea leaves and pumpkin pie spice lend a hefty dose of warm spice to this simple cake.</p>
+
+    <h3><a href="http://www.epicurious.com/recipes/food/views/black-forest-cake-51125600" target="_blank">Black Forest Cake</a></h3>
+    <p>This beautiful cake is definitely a project but it's just the thing to serve at a holiday gathering.</p>
+
+    <h3><a href="http://www.epicurious.com/recipes/food/views/ginger-spice-cake-with-dried-cherries-395034" target="_blank">Ginger Spice Cake with Dried Cherries</a></h3>
+    <p>While this cake is amazing with chocolate icing drizzled on top, it's also perfect with just a dusting of powdered sugar.</p>
+
+    <h3><a href="http://www.epicurious.com/recipes/food/views/peppermint-ice-cream-candyland-cake-240698" target="_blank">Peppermint Ice Cream Candyland Cake</a></h3>
+    <p>This cake, make with store-bought peppermint stick ice cream, couldn't be more festive.</p>
+  </div>
  </div></div>
 
  <div class="right-column"><div class="col-xs-12 col-sm-4">
@@ -36,7 +58,7 @@
  </div></div>
 </div></div>
 <script>
-
+ $("#more-recipes").hide();
 </script>
 </body>
 </html>
