--- a/final-exam.html
+++ b/final-exam.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Kate Thackrey</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="final-exam.css" />
@@ -27,26 +28,41 @@
    <h3><a href="http://www.epicurious.com/recipes/food/views/cinnamon-bun-bundt-cake-51196640" target="_blank">Cinnamon Bun Bundt Cake</a></h3>
    <p>Of course, any leftovers of this cake are a welcome treat at breakfast the next morning.</p>
 
-  <a id="reveal-recipes" href="#">See more recipies</a>
+  </br><a id="reveal-recipes" href="#">See more recipes</a>
 
   <div id="more-recipes">
     <h3><a href="http://www.epicurious.com/recipes/food/views/cranberry-spice-cake-368253" target="_blank">Cranberry Spice Cake</a></h3>
     <p>An easy lemon glaze adds an extra layer of brightness to this seasonal cake.</p>
-
-    <h3><a href="http://www.epicurious.com/recipes/food/views/chocolate-glazed-hazelnut-mousse-cake-233810" target="_blank">Chocolate-Glazed Hazelnut Mousse Cake</a></h3>
+   <h3><a href="http://www.epicurious.com/recipes/food/views/chocolate-glazed-hazelnut-mousse-cake-233810" target="_blank">Chocolate-Glazed Hazelnut Mousse Cake</a></h3>
     <p>This cake can be made up to 2 days ahead of time and stored in the fridge—just be sure to leave the glaze off until the day you serve it.</p>
-
     <h3><a href="http://www.epicurious.com/recipes-menus/our-most-festive-holiday-christmas-cakes-recipes-gallery/9" target="_blank">Spiced Chai Bundt Cake</a></h3>
     <p>Chai tea leaves and pumpkin pie spice lend a hefty dose of warm spice to this simple cake.</p>
-
     <h3><a href="http://www.epicurious.com/recipes/food/views/black-forest-cake-51125600" target="_blank">Black Forest Cake</a></h3>
     <p>This beautiful cake is definitely a project but it's just the thing to serve at a holiday gathering.</p>
-
     <h3><a href="http://www.epicurious.com/recipes/food/views/ginger-spice-cake-with-dried-cherries-395034" target="_blank">Ginger Spice Cake with Dried Cherries</a></h3>
     <p>While this cake is amazing with chocolate icing drizzled on top, it's also perfect with just a dusting of powdered sugar.</p>
-
     <h3><a href="http://www.epicurious.com/recipes/food/views/peppermint-ice-cream-candyland-cake-240698" target="_blank">Peppermint Ice Cream Candyland Cake</a></h3>
     <p>This cake, make with store-bought peppermint stick ice cream, couldn't be more festive.</p>
+
+    <br></br>
+
+    <a id="less-recipes" href="#">See fewer recipes</a>
+
+
+<script>
+  $("#more-recipes").hide();
+  $("#reveal-recipes").click(function() {
+    $("#more-recipes").slideDown();
+    $("#reveal-recipes").hide();
+    $("#less-recipes").slideDown();
+    });
+  $("#less-recipes").click(function() {
+    $("#more-recipes").slideUp();
+    $("#reveal-recipes").slideDown();
+    $("#less-recipes").hide();
+  });
+</script>
+
   </div>
  </div></div>
 
@@ -55,10 +71,8 @@
    <ul>
      <li><a href="http://www.epicurious.com/recipes-menus/clean-restorative-bowl-food-article" target="_blank">3 New Recipes for Bowl Food (Yes, Bowl Food)</a></li>
      <li><a href="http://www.epicurious.com/recipes-menus/three-five-ingredient-pastas-for-winter-recipes-article" target="_blank">Secrets of 5-Ingredient Pastas</a></li>
- </div></div>
+  </div></div>
+
 </div></div>
-<script>
- $("#more-recipes").hide();
-</script>
 </body>
 </html>
